testCases/keywords/test7.uni
main(){
	busOne= 100111b; //valid 	
	to = 11111100b; //error

}
neigh
